cabal-version:      2.4
name:               perun-cardano-wallet
version:            0.1.0.0

Tested-With: GHC == 8.10.7

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
author:             Jan Bormet
                    Norbert Dzikowski
maintainer:         feedback@perun.network

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared
  default-language: Haskell2010
  build-depends:    base ^>=4.14.1.0
  ghc-options:      -Wall
                    -- Safe to dis-/enable compiler flags. They mainly solve
                    -- issues compiling onchain code because depending on the
                    -- situation plutus-core might not compile due to GHC (Haskell
                    -- compiler) trying to access definitions used on-chain BEFORE
                    -- they are known to GHC.
                    -fno-ignore-interface-pragmas
                    -fno-omit-interface-pragmas
                    -fobject-code

executable perun-cardano-wallet
  import:           shared
  main-is:          Main.hs
  hs-source-dirs:   app
  other-modules:    Wallet.Wallet
  build-depends:    servant-server
                  , cardano-crypto
                  , perun-plutus
                  , plutus-contract
                  , plutus-ledger
                  , bytestring
                  , serialise
                  , wai
                  , warp

test-suite perun-cardano-wallet-test
  import:           shared
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N
                      -fno-warn-type-defaults